# Portfolio

./: README.md
Projects/Crash_Dump_Handler/: CMakeLists.txt  README.md
Projects/Crash_Dump_Handler/App/: CMakeLists.txt  STM32L475VGTx_FLASH.ld  debugger.c  hardfaulthandler_gnu.s  main.cpp  main.h  startup_stm32l475xx.s  stm32l4xx_it.c  stm32l4xx_it.h  syscalls.c  sysmem.c
Projects/Crash_Dump_Handler/App/test/: test.h  test_debugger.c  test_ui.cpp
Projects/Crash_Dump_Handler/Configuration/: stm32l475e_iot01_conf.h
Projects/Crash_Dump_Handler/Drivers/: CMakeLists.txt
Projects/Crash_Dump_Handler/Drivers/Adafruit/Adafruit-GFX/: Adafruit_GFX.h  CMakeLists.txt  glcdfont.c
Projects/Crash_Dump_Handler/Drivers/Adafruit/Adafruit_FT6206/: Adafruit_FT6206.h
Projects/Crash_Dump_Handler/Drivers/Adafruit/Adafruit_ILI9341/: Adafruit_ILI9341.cpp  CMakeLists.txt
Projects/Crash_Dump_Handler/Drivers/Adafruit/Adafruit_VS1053/: Adafruit_VS1053.cpp
Projects/Crash_Dump_Handler/Drivers/Arduino/SD/: CMakeLists.txt
Projects/Crash_Dump_Handler/Drivers/Arduino/SD/src/: SD.cpp  SD.h
Projects/Crash_Dump_Handler/Drivers/Arduino/SD/src/utility/: FatStructs.h  Sd2Card.h
Projects/Crash_Dump_Handler/Drivers/BSP/Components/es_wifi/: es_wifi.c
Projects/Crash_Dump_Handler/cmake/: arm-gcc-cortex-m4.cmake  arm-gcc-cortex-toolchain.cmake  utilities.cmake
Projects/MP3_Player/: .gitignore  CMakeLists.txt  README.md
Projects/MP3_Player/Adafruit/Adafruit-GFX/: Adafruit_GFX.cpp  Adafruit_GFX.h  CMakeLists.txt  glcdfont.c
Projects/MP3_Player/Adafruit/Adafruit_FT6206/: Adafruit_FT6206.cpp  Adafruit_FT6206.h  CMakeLists.txt
Projects/MP3_Player/Adafruit/Adafruit_ILI9341/: Adafruit_ILI9341.cpp  Adafruit_ILI9341.h  CMakeLists.txt  library.properties
Projects/MP3_Player/Adafruit/Adafruit_VS1053/: Adafruit_VS1053.cpp  Adafruit_VS1053.h  CMakeLists.txt  README.md  library.properties
Projects/MP3_Player/Adafruit/Adafruit_VS1053/examples/feather_midi/: feather_midi.ino
Projects/MP3_Player/Adafruit/Adafruit_VS1053/examples/player_gpiotest/: player_gpiotest.ino
Projects/MP3_Player/Adafruit/Adafruit_VS1053/examples/player_interrupts/: player_interrupts.ino
Projects/MP3_Player/Adafruit/Adafruit_VS1053/examples/player_miditest/: player_miditest.ino
Projects/MP3_Player/Adafruit/Adafruit_VS1053/examples/player_simple/: player_simple.ino
Projects/MP3_Player/Adafruit/Adafruit_VS1053/examples/record_ogg/: record_ogg.ino
Projects/MP3_Player/App/: CMakeLists.txt  STM32L475VGTx_FLASH.ld  log.c  log.h  main.cpp  main.h  startup_stm32l475xx.s  stm32l4xx_it.c  syscalls.c  sysmem.c  system_stm32l4xx.c
Projects/MP3_Player/App/test/: test.h  test_all.cpp  test_all.h  test_audiocard.cpp  test_rtos.cpp  test_sd.cpp  test_ui.cpp
Projects/MP3_Player/App/test/tasks/: mp3_control.h  task_audiocard.cpp  task_gui.cpp
Projects/MP3_Player/Configuration/: stm32l475e_iot01_conf.h
Projects/MP3_Player/Configuration/uCOS/: app_cfg.h  app_hooks.c  os_cfg.h
Projects/MP3_Player/Drivers/Adafruit/Adafruit-GFX/: Adafruit_GFX.cpp
Projects/MP3_Player/Drivers/Adafruit/Adafruit_FT6206/: Adafruit_FT6206.cpp  CMakeLists.txt
Projects/MP3_Player/Drivers/Adafruit/Adafruit_ILI9341/: Adafruit_ILI9341.h
Projects/MP3_Player/Drivers/Adafruit/Adafruit_VS1053/: Adafruit_VS1053.h  CMakeLists.txt
Projects/MP3_Player/Drivers/Arduino/SD/src/: File.cpp
Projects/MP3_Player/Drivers/Arduino/SD/src/utility/: Sd2Card.cpp  SdFat.h  SdFile.cpp
Projects/MP3_Player/Drivers/BSP/B-L475E-IOT01/: stm32l475e_iot01.c  stm32l475e_iot01_bus.c  stm32l475e_iot01_bus.h
Projects/MP3_Player/Drivers/BSP/Components/es_wifi/: CMakeLists.txt  es_wifi.h
Projects/MP3_Player/Drivers/CMSIS/Device/ST/STM32L4xx/Source/Templates/: system_stm32l4xx.c
Projects/MP3_Player/Middleware/Micrium/Software/uCOS-II/: CMakeLists.txt
Projects/MP3_Player/cmake/: arm-gcc-cortex-m4.cmake  arm-gcc-cortex-toolchain.cmake  utilities.cmake
Projects/Temperature_Monitoring/: .cproject  .project  EMBSYS-310-A-Final-Project.ioc  README.md
Projects/Temperature_Monitoring/Core/Inc/: main.h
Projects/Temperature_Monitoring/Core/Src/: Final_Project_Readme.md  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
